SEK - 2019/PP/Try.py.err.log
  File "/home/robot/PP/Try.py", line 306
    sleep(3).
            ^
SyntaxError: invalid syntax
